<resources>
    <string name="app_name">СЭД</string>
    <string name="username_hinf">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string-array name="empty_array"/>
    <string-array name="settings_view_start_page">
        <item>На рассмотрение</item>
        <item>Первичное рассмотрение</item>
        <item>Рассмотренные</item>
    </string-array>
    <string-array name="settings_view_start_page_values">
        <item>report</item>
        <item>primary_consideration</item>
        <item>processed</item>
    </string-array>
    <string-array name="settings_view_start_journal">
        <item>Все документы</item>
        <item>Входящие документы</item>
        <item>Обращения граждан</item>
        <item>Подписание/согласование</item>
        <item>НПА</item>
        <item>Приказы </item>
        <item>Приказы ДДО</item>
        <item>Внутренние документы</item>
        <item>На контроле</item>
    </string-array>
    <string-array name="settings_view_start_journal_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="settings_view_journals">
        <item>Входящие документы</item>
        <item>Обращения граждан</item>
        <item>НПА</item>
        <item>Внутренние документы</item>
        <item>Приказы </item>
        <item>Приказы ДДО</item>
        <item>Подписание/согласование</item>
    </string-array>
    <string-array name="settings_view_journals_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>5</item>
        <item>6</item>
        <item>3</item>
    </string-array>
    <string-array name="settings_years">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="settings_years_values">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="settings_view_start_page_identifier">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="ORGANIZATIONS">
        <item>Все организации</item>
    </string-array>
    <string-array name="settings_templates_decisions">
        <item>Шаблон 1</item>
        <item>The layout_weight dictates how the extra space is to be used. The Button does not want to stretch beyond the space it requires, so it has a weight of 0. The ListView wants to take up all of the extra space, so it has a weight of 1.</item>
        <item>You could accomplish something similar using a RelativeLayout, but if it is just these two items then I think a LinearLayout is simpler.</item>
    </string-array>
    <string name="tab_document">документ</string>
    <string name="tab_info">инфокарта</string>
    <string name="control">K</string>
    <string name="broken_image">Невозможно отобразить ЭО</string>
    <string name="favorites">★</string>
    <string name="favorites_template">Избранное</string>
    <string name="arrow_up">↑</string>
    <string name="arrow_down">↓</string>
    <string name="cross">❌</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отменить</string>
    <string name="approve">Подтвердить</string>
    <string name="info_create_decision"> СОЗДАТЬ РЕЗОЛЮЦИЮ </string>
    <string name="info_create_decision_processed"> СОЗДАТЬ ПОРУЧЕНИЕ </string>
    <string name="info_edit_decision"> РЕДАКТИРОВАТЬ </string>
    <string name="info_create_no_answer"> Без ответа </string>
    <string name="info_create_to_control"> Добавить отметку о контроле </string>
    <string name="info_create_to_favorites"> Добавить в избранное </string>
    <string name="constructor_create_no_answer">Редактор - Без ответа </string>
    <string name="constructor_create_to_favorites"> Редактор- В избранное </string>
    <string name="action_settings">Выполняется проверка пин кода…</string>
    <string name="drawer_item_journals">Журналы</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_settings_account">Учетная запись/Отображение</string>
    <string name="drawer_item_settings_config">Отображение</string>
    <string name="drawer_item_settings_templates">Шаблоны резолюций</string>
    <string name="drawer_item_settings_templates_off">Шаблоны отклонения</string>
    <string name="drawer_item_debug">Отладка</string>
    <string name="drawer_item_settings_log">Очередь задач</string>
    <string name="drawer_item_settings_signatures">Подписи ЭО</string>
    <string name="hint_urgency">Срочность</string>
    <string name="hint_head_font_size">Шрифт исполнителя</string>
    <string name="decision_on_sync_edit_denied">3апрещено редактировать резолюцию. Дождитесь выполнения операции.</string>
    <string name="decision_temporary_edit_denied">Дождитесь выполнения операции.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decision_create_no_answer">Удалить блок</string>
    <string name="decision_create_to_favorites"> ✓ action</string>
    <string name="dialog_oshs_add">Добавить</string>
    <string name="dialog_oshs_cancel">Отмена</string>
    <string name="dialog_oshs_title">Выберите сотрудника</string>
    <string name="fragment_decision_familiarize">Прошу ознакомить</string>
    <string name="fragment_decision_report">Прошу доложить</string>
    <string name="document_empty_list"> Нет документов для отображения </string>
    <string name="document_empty_list_error"> Произошла ошибка во время загрузки документов</string>
    <string name="host_hint">Хост</string>
    <string name="comment_hint">Комментарий</string>
    <string name="stepper_fragment_login">Авторизация</string>
    <string name="stepper_fragment_load_documents">Пользователь</string>
    <string name="stepper_fragment_load_info">Документы</string>
    <string name="stepper_login_username">авторизация</string>
    <string name="stepper_loader_user">Загрузка данных о пользователе</string>
    <string name="stepper_loader_list">Загрузка списка задач</string>
    <string name="stepper_loader_info">Загрузка данных по задачам</string>
    <string name="vertical_form_stepper_form_continue">Продолжить</string>
    <string name="vertical_form_stepper_form_last_step">Завершение</string>
    <string name="vertical_form_stepper_form_confirm_button">Начать работу</string>
    <string name="vertical_form_stepper_form_discard_question">Discard data?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information you have given will be lost</string>
    <string name="vertical_form_stepper_form_discard_cancel">Cancel</string>
    <string name="vertical_form_stepper_form_discard">Discard</string>
    <string name="vertical_form_stepper_form_sending_data_message">Sending data…</string>
    <string name="vertical_form_stepper_form_current_step_uncompleted_alert">Please complete the current field before continue</string>
    <string name="vertical_form_stepper_form_down_previous">down_previous</string>
    <string name="vertical_form_stepper_form_down_next">down_next</string>
    <string name="pdf_button_next_page">Следующая</string>
    <string name="pdf_button_prev_page">Предыдущая</string>
    <string name="decision_blank">Бланк резолюции</string>
    <string name="decision">РЕЗОЛЮЦИЯ</string>
    <string name="reject_decision">Отклонить</string>
    <string name="primary_people_copy">Подлинник</string>
    <string name="primary_people_responsible">Ответственный</string>
    <string name="primary_people_out">В Д/Ч</string>
    <string name="fragment_decision_hide_number">Не отображать номер блока</string>
    <string name="fragment_decision_hide_performers">Скрыть исполнителей</string>
    <string name="fragment_decision_button_add_people">Добавить исполнителя</string>
    <string name="fragment_decision_button_get_template">Ш</string>
    <string name="decision_text">Текст резолюции</string>
    <string name="hint_decision_size">Шрифт</string>
    <string name="constructor_add_block">ДОБАВИТЬ БЛОК</string>
    <string name="constructor_save">Сохранить</string>
    <string name="constructor_close">Закрыть</string>
    <string name="constructor_clear">Очистить</string>
    <string name="constructor_delete">Удалить</string>
    <string name="wait_for_sync">Синхр.</string>
    <string name="menu_info_from_the_report">Возврата с доклада</string>
    <string name="return_to_the_primary_consideration">Отклонить</string>
    <string name="menu_info_delegate_performance">ПЕРЕДАТЬ ПОДПИСАНИЕ</string>
    <string name="menu_info_delegate_sign">ПЕРЕДАТЬ СОГЛАСОВАНИЕ</string>
    <string name="menu_info_to_the_approval_performance">БЕЗ ОТВЕТА</string>
    <string name="menu_info_to_the_primary_consideration">Передать</string>
    <string name="menu_info_change_person">ПЕРЕДАТЬ</string>
    <string name="menu_info_next_person">ПОДПИСАТЬ</string>
    <string name="menu_info_sign_next_person">СОГЛАСОВАТЬ</string>
    <string name="menu_info_prev_person">ОТКЛОНИТЬ</string>
    <string name="decision_preview_approved">Утверждена</string>
    <string name="decision_preview_sync"> Ожидает синхронизации</string>
    <string name="magnifer">Увеличить</string>
    <string name="dialog_oshs_close">Закрыть</string>
    <string name="empty_list">В этом журнале документы отсутствуют</string>
    <string name="route">Маршрут прохождения документа</string>
    <string name="field_created_at">Дата создания:</string>
    <string name="field_short_description">Краткое содержание:</string>
    <string name="field_urgency">Срочность:</string>
    <string name="field_comment">Комментарий:</string>
    <string name="field_external_number">Номер поступившего документа:</string>
    <string name="to_favorites">В ИЗБРАННОЕ</string>
    <string name="to_control">НА КОНТРОЛЬ</string>
    <string name="dialog_template_title">Шаблоны резолюции</string>
    <string name="dialog_decision_template_empty">Шаблоны резолюции отсутствуют</string>
    <string name="dialog_rejection_template_empty">Шаблоны отклонения отсутствуют</string>
    <string name="no_files">Нет электронных образов</string>
    <string name="deleted_image">Срок хранения ЭО истёк.</string>
    <string name="deleted_image_load">Загрузить повторно</string>
    <string name="no_free_space">Невозможно загрузить электронный образ, на устройстве нет свободного места</string>
    <string name="cannot_open_image">Невозможно открыть электронный образ</string>
    <string name="open_in_another_app">Открыть в другом приложении</string>
    <string name="remove_from_favorites"> ИЗ ИЗБРАННОГО </string>
    <string name="remove_from_control">С КОНТРОЛЯ</string>
    <string name="auth_attention_text_restrict">Запрещается передавать и(или) распространять данную информацию вне информационных систем МВД России.</string>
    <string name="auth_attention_text_main">Информация, обрабатываемая и хранящаяся в сервисах ИСОД МВД России, является информацией ограниченного доступа и может быть использована исключительно для выполнения служебных обязанностей сотрудниками МВД России.</string>
    <string name="auth_attention">ВНИМАНИЕ!</string>
    <string name="auth_enter_cert">Войти</string>
    <string name="auth_enter_password">Войти по паролю</string>
    <string name="stepper_load_data">Загрузка данных, подождите</string>
    <string name="searchview_text_hint">Поиск</string>
    <string name="menu_info_decision_create_and_sign">СОХРАНИТЬ И ПОДПИСАТЬ</string>
    <string name="is_offline">НЕ В СЕТИ</string>
</resources>