<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_info_decision_create"
        app:showAsAction="always|withText"
        android:icon="@drawable/add_decision"
        android:title="@string/info_create_decision"/>
    <item
        android:id="@+id/menu_info_decision_edit"
        app:showAsAction="always|withText"
        android:icon="@drawable/edit_pencil"
        android:visible="false"
        android:title="@string/info_edit_decision"/>

    <item
        android:id="@+id/menu_info_shared_to_control"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_control_icon"
        android:title="@string/to_control"/>
    <item
        android:id="@+id/menu_info_to_the_primary_consideration"
        app:showAsAction="always|withText"
        android:icon="@drawable/change"
        android:title="@string/menu_info_change_person"/>
    <item
        android:id="@+id/menu_info_shared_to_favorites"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_favorites"
        android:title="@string/to_favorites"/>
    <item
        android:id="@+id/menu_info_report_dismiss"
        app:showAsAction="always|withText"
        android:icon="@drawable/dismiss"
        android:title="@string/menu_info_prev_person"/>
</menu>