<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_info_approval_next_person"
        app:showAsAction="always|withText"
        android:icon="@drawable/sign"
        android:title="@string/menu_info_sign_next_person"/>
    <item
        android:id="@+id/menu_info_approval_change_person"
        app:showAsAction="always|withText"
        android:icon="@drawable/change"
        android:title= "@string/menu_info_delegate_sign"/>
    <item
        android:id="@+id/menu_info_shared_to_favorites"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_favorites"
        android:title="@string/to_favorites"/>
    <item
        android:id="@+id/menu_info_shared_to_control"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_control_icon"
        android:title="@string/to_control"/>
    <item
        android:id="@+id/menu_info_approval_prev_person"
        app:showAsAction="always|withText"
        android:icon="@drawable/dismiss"
        android:title="@string/menu_info_prev_person"/>
</menu>