<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_info_from_the_report"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_info_from_the_report"/>
    <item
        android:id="@+id/menu_info_shared_to_control"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_control_icon"
        android:title="@string/to_control"/>
    <item
        android:id="@+id/menu_info_to_the_approval_performance"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_info_to_the_approval_performance"/>
    <item
        android:id="@+id/menu_info_shared_to_favorites"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_favorites"
        android:title="@string/to_favorites"/>
</menu>