<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.taptools.android.sportshistory.PlayerProfileActivity">

    <item
        android:id="@+id/action_constructor_add_block"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/add_decision"
        android:title="@string/constructor_add_block"/>
    <item
        android:id="@+id/action_constructor_infocard"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/infocard"
        android:title="@string/tab_info"/>
    <item
        android:id="@+id/action_constructor_documents"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/documents"
        android:title="@string/tab_document"/>
    <item
        android:id="@+id/action_constructor_create_and_sign"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/sign"
        android:title="@string/menu_info_decision_create_and_sign"/>
    <item
        android:id="@+id/action_constructor_next"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/sign"
        android:visible="false"
        android:title="@string/menu_info_next_person"/>
    <item
        android:id="@+id/action_constructor_prev"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/dismiss"
        android:visible="false"
        android:title="@string/menu_info_prev_person"/>
    <!--<item-->
        <!--android:id="@+id/action_constructor_save"-->
        <!--app:showAsAction="ifRoom|withText"-->
        <!--android:title="@string/constructor_save"/>-->
    <!--<item-->
        <!--android:id="@+id/action_constructor_close"-->
        <!--app:showAsAction="ifRoom|withText"-->
        <!--android:title="@string/constructor_close"/>-->
    <!--<item-->
        <!--android:id="@+id/menu_info_shared_to_favorites"-->
        <!--app:showAsAction="always|withText"-->
        <!--android:icon="@drawable/to_favorites"-->
        <!--android:title="@string/to_favorites"/>-->
    <!--<item-->
        <!--android:id="@+id/menu_info_shared_to_control"-->
        <!--app:showAsAction="always|withText"-->
        <!--android:icon="@drawable/to_control_icon"-->
        <!--android:title="@string/to_control"/>-->
</menu>