<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.taptools.android.sportshistory.PlayerProfileActivity">

    <item
        android:id="@+id/action_info_create_decision"
        app:showAsAction="always|withText"
        android:icon="@drawable/add_decision"
        android:enabled="false"
        android:title="@string/info_create_decision"/>
    <item
        android:id="@+id/menu_info_shared_to_favorites"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_favorites"
        android:title="@string/to_favorites"/>
    <item
        android:id="@+id/menu_info_shared_to_control"
        app:showAsAction="always|withText"
        android:icon="@drawable/to_control_icon"
        android:title="@string/to_control"/>
</menu>