<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.taptools.android.sportshistory.PlayerProfileActivity">

    <item
        android:id="@+id/substituteModeLabel"
        app:showAsAction="always|withText"
        android:icon="@drawable/users_white"
        android:visible="false"
        android:title=" РЕЖИМ ЗАМЕЩЕНИЯ"/>

    <item
        android:id="@+id/removeQueue"
        app:showAsAction="always|withText"
        android:icon="@drawable/dismiss"
        android:visible="true"
        android:title=""/>
    <item
        android:id="@+id/checkQueue"
        app:showAsAction="always|withText"
        android:icon="@drawable/repeat"
        android:visible="true"
        android:title=""/>

    <item
        android:id="@+id/online"
        app:showAsAction="always|withText"
        android:icon="@drawable/icon_offline"
        android:visible="true"
        android:title="@string/is_offline"/>

    <item
        android:id="@+id/reload"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/stepper_load_data"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/searchview_text_hint"
        app:showAsAction="always" />

</menu>